--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
