--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
     "recoil-persist": "^4.2.0",
+    "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
