--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.0.0",
     "recoil": "^0.7.5",
     "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
