--- a/client/package.json
+++ b/client/package.json
@@ -58,5 +58,5 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   },
-  "proxy": "http://211.41.205.19:8080"
+  "proxy": "https://211.41.205.19:8080"
 }
