--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "https": "^1.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
@@ -52,6 +53,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
-  },
-  "proxy": "http://211.41.205.19:8080"
+  }
 }
