--- a/server/fly-away/build.gradle
+++ b/server/fly-away/build.gradle
@@ -30,14 +30,11 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.307'
 
-
-
-
 	implementation 'mysql:mysql-connector-java'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
+	implementation 'com.auth0:java-jwt:3.19.2'
 
 }
 
